:bug: fix layout bug

--- a/src/pages/playlists/Playlist.module.scss
+++ b/src/pages/playlists/Playlist.module.scss
@@ -1,4 +1,5 @@
 .outer {
+  width: 100%;
   min-width: 0;
 }
 
